feat: Refactor and rename services to NovaEco; update workflows and artifacts
- Updated GitHub Actions workflows to reflect new naming conventions for API, App, Auth, and Website services.
- Changed tag naming from "ecosystem-core" to "novaeco" across all workflows.
- Enhanced the API Gateway with a proxy mechanism for internal services.
- Added health check and login endpoints to the Auth service.
- Introduced a new client SDK generation script for the Auth service.
- Improved the Mission Control App with a dynamic dashboard and sector links.
- Added integration tests for service health checks and core flows.
- Created README files for better documentation of services.
- Added internal requirements files for architectural consistency.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,8 +1,21 @@
 # CODEOWNERS file
-# Each service is owned by its corresponding maintainer team.
+# Defines who is responsible for code in this repository.
+# These owners will be automatically requested for review when someone opens a pull request.
 
+# ------------------------------------------------------------------
+# Core Services
+# ------------------------------------------------------------------
 /api/      @novaeco-tech/maintainers-core
 /app/      @novaeco-tech/maintainers-core
 /auth/     @novaeco-tech/maintainers-core
 /website/  @novaeco-tech/maintainers-core
+
+# ------------------------------------------------------------------
+# Testing & Quality
+# ------------------------------------------------------------------
 /tests/    @novaeco-tech/maintainers-core
+
+# ------------------------------------------------------------------
+# Workflows & Config (Optional but recommended)
+# ------------------------------------------------------------------
+/.github/  @novaeco-tech/maintainers-core
