--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -1,4 +1,6 @@
 flask==3.0.0
-flask-cors==4.0.0
-gunicorn==21.2.0
+grpcio==1.60.0
+grpcio-tools==1.60.0
+protobuf==4.25.1
 pyjwt==2.8.0
+gunicorn==21.2.0
