--- a/website/package.json
+++ b/website/package.json
@@ -26,7 +26,8 @@
     },
     "devDependencies": {
         "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0"
+        "jest-environment-jsdom": "^29.7.0",
+        "eslint": "^8.45.0"
     },
     "browserslist": {
         "production": [
