refactor: update project name and configuration for novaeco website
- Changed project name from 'ecosystem-core' to 'novaeco' in docusaurus.config.js
- Updated edit URL in docusaurus.config.js to reflect new project structure
- Modified package.json and package-lock.json to rename from 'ecosystem-website' to 'novaeco-website'
- Enhanced sidebars.js with generated index links and improved documentation structure
- Updated index.js to reflect new service names and descriptions, enhancing clarity and relevance

--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ecosystem-website",
+    "name": "novaeco-website",
     "version": "0.1.0",
     "private": true,
     "scripts": {
