refactor: update CI workflow and requirements files for improved clarity and organization

--- a/tests/integration/requirements.txt
+++ b/tests/integration/requirements.txt
@@ -1,2 +1,2 @@
-pytest==8.0.0
+# List here all libraries which are specific for this component, and not provided already by the dev Docker container
 requests==2.31.0
