--- a/auth/requirements-dev.txt
+++ b/auth/requirements-dev.txt
@@ -1,3 +1,2 @@
 -r requirements.txt
-pytest==8.0.0
-ruff==0.1.6
+# List here all libraries which are specific for this component, and not provided already by the dev Docker container
