--- a/tests/e2e/requirements.txt
+++ b/tests/e2e/requirements.txt
@@ -1,3 +1,4 @@
+# E2E tests run outside the dev Docker container, so all libraries needed have to be listed here.
 pytest-playwright>=0.5.0
 playwright>=1.49.0
 pytest==8.0.0
