--- a/tests/performance/requirements.txt
+++ b/tests/performance/requirements.txt
@@ -1,1 +1,1 @@
-pytest==8.0.0
+# List here all libraries which are specific for this component, and not provided already by the dev Docker container
