--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,11 @@
         "vscode": {
             "extensions": [
                 "ms-python.python",
+                "ms-python.vscode-pylance",
                 "dbaeumer.vscode-eslint",
-                "ms-azuretools.vscode-docker"
+                "tamasfe.even-better-toml",
+                "zxh404.vscode-proto3",
+                "ms-playwright.playwright"
             ]
         }
     },
